
2021-02-25  Ron Norman <rjn@inglenet.com>

	* fileio: added COB_FILE_VBISAM to set default ISAM format

2021-02-12  Ron Norman <rjn@inglenet.com>

	* fileio database: added comments about some possible environment
			variables that could be set to define database connection

2021-02-08  Ron Norman <rjn@inglenet.com>

	* fileio: Change 'file_log' name to 'rollback'
			removed 'create_table' since table is only created if not present

2021-01-08  Ron Norman <rjn@inglenet.com>

	* fileio: added option file_log for ISAM files

2020-10-19  Ron Norman <rjn@inglenet.com>

	* fileio: added option dups_ahead for INDEXED files

2020-08-18  Simon Sobisch <simonsobisch@gnu.org>

	* bs2000-strict.conf, cobol85.conf, cobol2002.conf, cobol2014.conf:
	  changed assign-clause to 'external'

2020-08-17  Simon Sobisch <simonsobisch@gnu.org>

	* general: added option local-implies-recursive

2020-07-17  Edward Hart <edward.dan.hart@gmail.com>

	* general: added option dpc-in-data.

2020-07-05  Edward Hart <edward.dan.hart@gmail.com>

	* general: added option vsam-status.

2020-03-31  Ron Norman <rjn@inglenet.com>

	* general: added option align-record and align-opt

2020-04-03  Simon Sobisch <simonsobisch@gnu.org>

	* general: added option numeric-pointer *EXPERIMENTAL*

2020-03-27  Simon Sobisch <simonsobisch@gnu.org>

	* general: removed option "select-working" (see bug #421)

2020-03-31  Simon Sobisch <simonsobisch@gnu.org>

	* general: added option special-names-clause

2020-02-13  Ron Norman <rjn@inglenet.com>

	* general: added option create_table

2020-01-22  Ron Norman <rjn@inglenet.com>

	* general: added option bdb_byteorder

2020-01-12  Simon Sobisch <simonsobisch@gnu.org>

	* general: bug #513 (partial) added sync-left-right

2020-01-04  Edward Hart <edward.dan.hart@gmail.com>

	* general: added options assign-variable, assign-using-variable,
	  assign-ext-dyn and assign-disk-from.

2020-01-01  Simon Sobisch <simonsobisch@gnu.org>

	* general: FR #193 added same-as-clause