@@ -509,6 +509,14 @@
 #          Default:  false
 #          Example:  file_vbisam=TRUE
 
+# Environment name:  COB_FILE_ISNODAT
+#   Parameter name:  file_isnodat
+#          Purpose:  Should ISAM 'data file' have the '.dat' extension or not
+#                    (The ISAM 'index file' will always have a '.idx' extension)
+#             Type:  boolean
+#          Default:  false
+#          Example:  file_isnodat=TRUE
+
 # Environment name:  COB_STOP_RUN_COMMIT
 #   Parameter name:  stop_run_commit
 #          Purpose:  On STOP RUN with updates pending should it COMMIT
